--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -5,10 +5,10 @@ body {
 	font-family: 'Exo 2', sans-serif;
 	padding: 0;
 	margin: 0;
-	background-color: #222629;
 	color: white;
 	text-align: center;
 	margin 50px auto;
+	background-image: url(http://localhost/~levko/img/snooker_back03.png);
 }
 * {
     -webkit-box-sizing: border-box;
